--- a/src/view/ViewTelaPrincipal.form
+++ b/src/view/ViewTelaPrincipal.form
@@ -102,6 +102,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="Modificar"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuModificarProfessorActionPerformed"/>
+                  </Events>
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuRemoverProfessor">
                   <Properties>
@@ -139,6 +142,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="Modificar"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuModificarCursoActionPerformed"/>
+                  </Events>
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuRemoverCurso">
                   <Properties>
@@ -243,6 +249,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Calcelar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuCancelarActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
